# 43x-automation-tester

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  START_GUIDE.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt
automation_tester/: __init__.py  agents.py  api.py  config.py  entrepreneur_agent.py  entrepreneur_agent_service.py  logging_config.py  prompts.py  scenario_loader.py  test_import.py  utils.py
automation_tester/file/: README.md  __init__.py  base_file.py  file.py  image.py  markdown.py  pdf.py  ppt.py  text.py  word.py
automation_tester/services/: __init__.py  local_storage.py  memory_manager.py  rag_service.py
automation_tester/utils/: __init__.py  adk_config.py  context_limiter.py  file_utils.py  image_parser.py  message.py  project_utils.py  text_chunker.py
chrome-extension/: FEATURES.md  FILE_UPLOAD_GUIDE.md  MULTI_ROUND_FIX.md  README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js  settings.css  settings.html  settings.js
chrome-extension/icons/: .gitkeep
examples/: file_processing_example.py
scenarios/: SCENARIOS_GUIDE.md  ai_saas_pass.json  hardware_reject.json  medical_ai_edge.json
scripts/: package_extension.py  start_service.py  test_env.py
